fixed ui jump when profile tier loaded

--- a/apps/merck-customer/src/app/account/profile/profile.component.scss
+++ b/apps/merck-customer/src/app/account/profile/profile.component.scss
@@ -4,6 +4,7 @@ mat-list {
   p {
     color: #1b1b25;
     font-size: 1.4rem;
+    min-height: 1.6rem;
   }
 
   p.label {
